acertando alguns links

--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -1,7 +1,7 @@
 <h3>Ex-situ</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <p>
-    <a href="{{static_url}}/images/projetos/areas/mapa.png" target="_blank"><div class="banner-m"><img src="{{static_url}}/images/projetos/ex-situ/ex situ.jpg"/></div></a>
+    <div class="banner-m"><img src="{{static_url}}/images/projetos/ex-situ/ex situ.jpg"/></div>
   O Projeto Ex Situ é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais.
   </p>
 
