--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasDoCerrado.pdf" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
       Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
       que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
@@ -25,13 +25,13 @@
 
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/AreasPrioritarias.pdf">
+    <a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">
       <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/AreasPrioritarias.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
     <p>
       O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
       e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
