--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -49,7 +49,7 @@
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
-        <a href="http://cncflora.jbrj.gov.br/AreasPrioritarias.pdf">
+        <a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">
           <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png"/>
           <div class="portfolio-overlay">
             <br/>
