Tudo em breve novamente

--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -48,8 +48,9 @@
   <h3>Produtos</h3>
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">
+      <div class="img breve">
+        <!--<a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">-->
+        <a href="#">
           <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png"/>
           <div class="portfolio-overlay">
             <br/>
@@ -60,6 +61,7 @@
       </div>
     </div>
     <p>
+    <strong>Breve</strong>
       O livro “Áreas Prioritárias para Conservação e Uso Sustentável da Flora Brasileira Ameaçada de Extinção” é um importante instrumento para elaboração de políticas públicas, pois indica as localidades no território nacional onde ações para reduzir o risco de extinção de espécies da flora brasileira podem ser mais efetivas, visando alcançar a Meta 11 do Plano Estratégico para a Conservação da Biodiversidade de Aichi (CDB) até 2020. A Meta 11 prevê que 17% das áreas terrestres e marinhas de cada país devem estar protegidas para a conservação da biodiversidade até 2020. Além disso, o mapa direciona políticas para o cumprimento das metas 5 e 7 da Estratégia Global para a Conservação de Plantas (GSPC). 
     </p>
     </div>
