--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -53,12 +53,15 @@
   <div class="doc">
 
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
+      <div class="img breve">
+        <!--
         <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf"  >
+        -->
+        <a href="">
           <img src="{{static_url}}/images/livro_vermelho_2014.jpg"/>
           <div class="portfolio-overlay">
               <br/>
-              <p> Livro Vermelho Plantas Raras do Cerrado, 2014</p>
+              <p>Em Breve<br /><br />Livro Vermelho Plantas Raras do Cerrado, 2014</p>
           </div>
         </a>
       </div>
