--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -13,11 +13,14 @@
   <h3>Produtos</h3>
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
+      <div class="img breve">
+        <!--
+        <a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">
+        -->
         <a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">
           <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
           <div class="portfolio-overlay">
-            <p> PAN Faveiro de Wilson</p>
+            <p>Breve<br /><br /> PAN Faveiro de Wilson</p>
           </div>
         </a>
       </div>
