--- a/templates/home.html
+++ b/templates/home.html
@@ -92,10 +92,13 @@
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/livrovermelho.png" alt="" /></a>
+          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/ex-situ/capa_estrategia1.png" alt="" /></a>
           <div class="inner">
-            <h3><a href="{{base_url}}/pt-br/livros">Livro Vermelho da Flora do Brasil</a></h3>
-            <p>O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
+            <h3><a href="{{base_url}}/pt-br/livros">Estratégia Nacional para conservação ex situ</a></h3>
+            <p>Com o objetivo de promover a conservação efetiva da flora ameaçada e reverter os
+            processos de extinção, foi elaborada esta Estratégia, que traça diretrizes para fortalecer, 
+            ampliar e integrar os esforços de conservação ex situ de espécies ameaçadas da flora 
+            brasileira.</p>
           </div>
         </div>
       </section>
