--- a/templates/home.html
+++ b/templates/home.html
@@ -98,7 +98,11 @@
             <p>Com o objetivo de promover a conservação efetiva da flora ameaçada e reverter os
             processos de extinção, foi elaborada esta Estratégia, que traça diretrizes para fortalecer, 
             ampliar e integrar os esforços de conservação ex situ de espécies ameaçadas da flora 
-            brasileira.</p>
+            brasileira.
+            <br /><br />
+            <br /><br />
+            <br /><br />
+            </p>
           </div>
         </div>
       </section>
