--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,51 +1,50 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <!--
-    <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasDoCerrado.pdf" >
+    <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf" >
       <img src="{{static_url}}/images/livro_vermelho_2014.jpg" />
     </a>
-    -->
-      <img src="{{static_url}}/images/livro_vermelho_2014.jpg" />
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <!--
     <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
-    -->
-    <h4><a href="" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
-    <p><strong>Breve</strong>
-      Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
-      que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
-      priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das
-      áreas críticas para conservação e a perda de hábitat nesse bioma vem alcançando índices
-      alarmantes. Frente aos desafios de conservar espécies ameaçadas em função da
-      destruição paulatina dos seus hábitats, o objetivo do Livro Vermelho da flora do Brasil
-      – Plantas raras do Cerrado foi avaliar o risco de extinção de espécies consideradas raras
-      segundo o conceito de raridade de Giulietti et al. (2009) e com ocorrência e/ou
-      endêmicas do Cerrado. Assim, a partir da avaliação do risco de extinção das plantas
-      raras do Cerrado pretende-se subsidiar estratégias para o direcionamento de esforços
-      conservacionistas voltados as espécies mais suscetíveis à extinção iminente.</p>
+    <p>
+    Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso 
+
+    que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser 
+
+    priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das 
+
+    áreas críticas para conservação e a perda de hábitat nesse bioma vem alcançando índices 
+
+    alarmantes. Frente aos desafios de conservar espécies ameaçadas em função da 
+
+    destruição paulatina dos seus hábitats, o objetivo do Livro Vermelho da flora do Brasil 
+
+    – Plantas raras do Cerrado foi avaliar o risco de extinção de espécies consideradas raras 
+
+    segundo o conceito de raridade de Giulietti et al. (2009) e com ocorrência e/ou 
+    
+    endêmicas do Cerrado. Assim, a partir da avaliação do risco de extinção das plantas 
+    
+    raras do Cerrado pretende-se subsidiar estratégias para o direcionamento de esforços 
+    
+    conservacionistas voltados as espécies mais suscetíveis à extinção iminente.
+
+      </p>
   </div>
 </div>
 
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <!--
     <a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">
       <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
     </a>
-    -->
-    <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <!--
     <h4><a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
-    -->
-    <h4><a href="">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
     <p>
-    <strong>Breve</strong>
       O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
       e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
       mapas das áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de
@@ -59,21 +58,14 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <!--
     <a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">
       <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" />
     </a>
-    -->
-      <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" />
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <!--
     <h4><a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson</a></h4>
-    -->
-    <h4><a href="">PAN Faveiro de Wilson</a></h4>
     <p>
-    <strong>Breve</strong>
       O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
     </p>
   </div>
