--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -53,15 +53,12 @@
   <div class="doc">
 
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-        <!--
+      <div class="img">
         <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf"  >
-        -->
-        <a href="">
           <img src="{{static_url}}/images/livro_vermelho_2014.jpg"/>
           <div class="portfolio-overlay">
               <br/>
-              <p>Em Breve<br /><br />Livro Vermelho Plantas Raras do Cerrado, 2014</p>
+              <p><br />Livro Vermelho Plantas Raras do Cerrado, 2014</p>
           </div>
         </a>
       </div>
