--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -58,13 +58,13 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">
+    <a href="http://cncflora.jbrj.gov.br/PAN_Faveiro-de-Wilson.pdf">
       <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson</a></h4>
     <p>
       O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
     </p>
