--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -14,7 +14,7 @@
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
-        <a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">
+        <a href="http://cncflora.jbrj.gov.br/PAN_Faveiro-de-Wilson.pdf">
           <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
           <div class="portfolio-overlay">
             <p><br /> PAN Faveiro de Wilson</p>
