--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
     </div>
     <style type="text/css"> h4 { font-size: 22px; } </style>
     <div class="nine columns">
-        <h4>Avalalçao de risco de extinção</h4>
+        <h4>Avaliaçao de risco de extinção</h4>
         <p class='date'><strong>Data: </strong> {{assessment["date"]}}</p>
         <p class='criteria'><strong>Criterio: </strong> {{assessment["criteria"]|default("N/A")}}</p>
         <p class='assessor'><strong>Avaliador: </strong> {{assessment["assessor"]}}</p>
