links to arqquivos

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -37,7 +37,7 @@
 
     <div class="seven columns map">
       <h4>Mapa de distribui&ccedil;&atilde;o</h4>
-      <img src="http://cncflora.jbrj.gov.br/mapas/{{assessment["taxon"]["scientificNameWithoutAuthorship"]}}" />
+      <img src="http://cncflora.jbrj.gov.br/arquivos/arquivos/mapas/{{assessment["taxon"]["scientificNameWithoutAuthorship"]}}" />
     </div>
 
     <div class="sixteen columns">
