--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,13 +1,13 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf" >
+    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" >
       <img src="{{static_url}}/images/livro_vermelho_2014.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
     Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso 
 
@@ -37,13 +37,13 @@
 
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">
+    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_áreas_prioritárias2014.pdf">
       <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/Livro_áreas_prioritárias2014.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_áreas_prioritárias2014.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
     <p>
       O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
       e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
@@ -58,13 +58,13 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/PAN_Faveiro-de-Wilson.pdf">
+    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">
       <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson</a></h4>
     <p>
       O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
     </p>
@@ -72,13 +72,13 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">
+    <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf">
       <img src="{{static_url}}/images/livrovermelho.png" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
     <p>
       O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
     </div>
