--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -5,7 +5,7 @@
     <p>De acordo com a Portaria nº 43 de 31 de Janeiro de 2014, é atribuído ao Jardim Botânico do Rio de Janeiro/CNCFlora a responsabilidade de elaborar e publicar Planos de Ação Nacionais (PANs) para todas as espécies da flora ameaçadas de extinção. Diante deste enorme desafio, o CNCFlora/JBRJ conduz o processo de elaboração, implementação e monitoramento dos PANs, focando, principalmente, em uma abordagem territorial para combater e mitigar as ameaças incidentes nas áreas e nas populações de todas as espécies com ocorrência no território abordado. Planos de ação direcionados para uma espécie também podem ser elaborados, desde que haja estudos suficientes que possam embasar o planejamento das ações e justificar o investimento de recursos e esforços.</p>
     <p><div class="banner-m"><img src="{{static_url}}/images/projetos/planejamento/DSCN1326.jpg" /></div>Os PANs são elaborados de acordo com a ideia central de planejamento estratégico apresentado por SSC/IUCN 2008, Environment Canada 2003, NMFS 2004, Driver et al. 2009, e são compostos de duas partes. A primeira contém uma compilação da melhor informação disponível sobre as espécies e área, além da descrição das ameaças incidentes. A segunda é o plano de ação propriamente dito, que é construído e consolidado de forma participativa, reunindo pessoas de diversos setores e com conhecimento sobre as espécies e a região, para que as ações possam ser direcionadas à realidade local e factíveis de serem implementadas e monitoradas.</p>
     <p>
-    Confira e colabore com a criação do <a href="http://cncflora.jbrj.gov.br/wiki/doku.php?id=protocolo_de_campo">Protocolo de Campo</a> na wiki do CNCFlora.
+    Confira e colabore com a criação do <a href="http://cncflora.jbrj.gov.br/arquivos/wiki/doku.php?id=protocolo_de_campo">Protocolo de Campo</a> na wiki do CNCFlora.
     </p>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
@@ -14,7 +14,7 @@
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
-        <a href="http://cncflora.jbrj.gov.br/PAN_Faveiro-de-Wilson.pdf">
+        <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">
           <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
           <div class="portfolio-overlay">
             <p><br /> PAN Faveiro de Wilson</p>
