update fb token

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <script src="https://connect.facebook.net/en_US/sdk.js" type="text/javascript"></script>
 
 		<script>
-          var app_token="CAAWbKCxg5jABABm6ZAesYiHEhGt7gc3f6oZAFZC7wKCsjgjPFujV6XApAvyZBueZBZCKvO1frrxvTnNXkbMKN06eOlw8bcwvlrTo133NK7uHuFBhM4IvxMNCKRgOZClZCHL5HjIjqXW8FD8Qs2ZAdXbyKvamwM2PgOglAdFxpqB8cTqMXvlF2EAyMZB7IMzxIM6gG1ZAeNAC2AjnQZDZD";
+          var app_token="CAAWbKCxg5jABABmLOKhTOvd1W5YJKtmnEVtgHJa1nte9wcEvvLlQxclFngZCvt2ZAsVRZCEwBHnc1IT0uon6vAvMbd9N0gzGS1Ql8esmpIVQzmrlG81XPfbZBzxVgQVyXcZBTZBxpuMkdspFCLAdaEZCzp5k68ibeUk7Y0svmTp6FUA3csQq0x9"
 
 					$(document).ready(function(){
 						$('.slider1').bxSlider({
