livros nos documentos

--- a/templates/document.html
+++ b/templates/document.html
@@ -5,6 +5,10 @@
     <div class="row">
       <div class="box-section col-sm-12 col-md-12 col-lg-12">
         <br/>
+        <h3>Livros</h3>
+        <div class="sidebar-menu">
+            {% include "content/"+language+"/document/livros.html" %}
+        </div>
         <h3>Publicações CNCFlora</h3>
         <div class="sidebar-menu">
             {% include "content/"+language+"/document/publicacoes.html" %}
