--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -105,7 +105,7 @@
               <li><a href="{{base_url}}/pt-br/publicacoes">Documentos</a></li>
             </ul>
             <ul class="login">
-              <li><a href="/entrypoint">Login</a></li>
+              <li><a href="/entrypoint">Acesso ao sistema</a></li>
               <!-- <li><a href="">pt</a></li>/
               <li><a href="">en </a></li> -->
             </ul>
