several requested content update

--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -81,6 +81,10 @@
     <h4><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
     <p>
       O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
+    <p>
+      <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho2013Errata-17-02-2014.pdf">Errata 17/02/2014</a>
+      <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho2013Errata-31-03-2014.pdf">Errata 31/03/2014</a>
+    </p>
     </div>
   </div>
 
