--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -1,4 +1,4 @@
-<h3>Áreas Prioritárias</h3>
+<h3>Núcleo Planejamento Espacial para Conservação</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <div class="banner-full"><img src="{{static_url}}/images/projetos/areas/areas-prioritarias-capa.jpg" /></div>
   <p>Em 2013, o CNCFlora publicou o Livro vermelho da flora do Brasil. Essa lista de
@@ -11,11 +11,11 @@
   <p>Com essa motivação, no início de 2014, foi instituído o Programa Nacional de Conservação das
   Espécies Ameaçadas de Extinção – Pró-Espécies. Nesse programa, foi atribuída ao Instituto de
   Pesquisas Jardim Botânico do Rio de Janeiro a elaboração de mapas de áreas prioritárias para
-  conservação da flora. A partir dessa atribuição foi desenvolvido o projeto Áreas prioritárias para
+  conservação da flora. A partir dessa atribuição foi desenvolvido o núcleo Áreas prioritárias para
   conservação e uso sustentável da flora brasileira ameaçada de extinção que tem como objetivo
   indicar áreas prioritárias para conservação e uso sustentável em todo o território nacional, para
   que o Brasil diminua o risco de extinção das espécies da flora.</p>
-  <p>O projeto é uma parceria entre o CNCFlora e o Laboratório de Bioeografia da Conservação
+  <p>O núcleo é uma parceria entre o CNCFlora e o Laboratório de Bioeografia da Conservação
   (CB-Lab) da Universidade Federal de Goiás, dirigido pelo Prof. Rafael Loyola. O projeto é
   caracterizado por fornecer instrumentos para elaboração de políticas públicas, direcionando ações
   de conservação para áreas que facilitariam o alcance das Metas 11 e 12 do Plano Estratégico
