--- a/templates/content/pt-br/project/index.html
+++ b/templates/content/pt-br/project/index.html
@@ -1,4 +1,4 @@
-<h3>Projetos</h3>
+<h3>Núcleos</h3>
 <div class="box-section box-project ">
 
   <div class="description col-sm-12 col-md-12 col-lg-12">
@@ -8,8 +8,7 @@
         espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
         <a href="http://www.cbd.int/gspc/" target="_blank">“Estratégia Global de Conservação de Plantas”</a>. Listas vermelhas constituem uma ferramenta
         importante para a priorização de investimentos na conservação de espécies e
-        também demandam muitos recursos para sua construção e atualização
-        (Rodinini et al., 2013).
+        também demandam muitos recursos para sua construção e atualização.
     </p>
   </div>
 </div>
@@ -23,7 +22,7 @@
 </div>
 <div class="box-section box-project ">
   <div class="description col-sm-12 col-md-12 col-lg-12">
-    <h4><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Áreas Prioritárias</a></h4>
+    <h4><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Planejamento Espacial para Conservação</a></h4>
     <p>
     No início de 2014, foi instituído o Programa Nacional de Conservação das Espécies Ameaçadas de Extinção – Pró-Espécies. Nesse programa, foi atribuída ao Instituto de Pesquisas Jardim Botânico do Rio de Janeiro a elaboração de mapas de áreas prioritárias para conservação da flora. A partir dessa atribuição foi desenvolvido o projeto Áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de extinção que tem como objetivo indicar áreas prioritárias para conservação e uso sustentável em todo o território nacional, para que o Brasil diminua o risco de extinção das espécies da flora.
 
