--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -1,12 +1,18 @@
-<h3>Planejamento de Ações</h3>
+<h3>Núcleo Planejamento de Ações</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
     <div class="banner-full"><img src="{{static_url}}/images/projetos/planejamento/cerrado.jpg" /></div>
     <p>O planejamento de ações para a conservação da flora é a etapa seguinte à avaliação do risco de extinção das espécies. Após a elaboração de uma lista de espécies ameaçadas, torna-se necessário o planejamento e a implementação de ações que visem a retirada das espécies da lista.</p>
-    <p>De acordo com a Portaria nº 43 de 31 de Janeiro de 2014, é atribuído ao Jardim Botânico do Rio de Janeiro/CNCFlora a responsabilidade de elaborar e publicar Planos de Ação Nacionais (PANs) para todas as espécies da flora ameaçadas de extinção. Diante deste enorme desafio, o CNCFlora/JBRJ conduz o processo de elaboração, implementação e monitoramento dos PANs, focando, principalmente, em uma abordagem territorial para combater e mitigar as ameaças incidentes nas áreas e nas populações de todas as espécies com ocorrência no território abordado. Planos de ação direcionados para uma espécie também podem ser elaborados, desde que haja estudos suficientes que possam embasar o planejamento das ações e justificar o investimento de recursos e esforços.</p>
-    <p><div class="banner-m"><img src="{{static_url}}/images/projetos/planejamento/DSCN1326.jpg" /></div>Os PANs são elaborados de acordo com a ideia central de planejamento estratégico apresentado por SSC/IUCN 2008, Environment Canada 2003, NMFS 2004, Driver et al. 2009, e são compostos de duas partes. A primeira contém uma compilação da melhor informação disponível sobre as espécies e área, além da descrição das ameaças incidentes. A segunda é o plano de ação propriamente dito, que é construído e consolidado de forma participativa, reunindo pessoas de diversos setores e com conhecimento sobre as espécies e a região, para que as ações possam ser direcionadas à realidade local e factíveis de serem implementadas e monitoradas.</p>
+    <p>
+    De acordo com a Portaria nº 43 de 31 de Janeiro de 2014, é atribuído ao Jardim Botânico do Rio de Janeiro/CNCFlora a responsabilidade de elaborar e publicar Planos de Ação Nacional (PANs) para todas as espécies da flora ameaçadas de extinção. Diante deste enorme desafio, o CNCFlora/JBRJ conduz o processo de elaboração, implementação e monitoramento dos PANs. O principal foco dos PANs elaborados pelo CNCFlora/JBRJ é em uma abordagem territorial para combater e mitigar as ameaças incidentes nas áreas, e nas populações de todas as espécies com ocorrência no território abordado. Os PANs direcionados para uma única espécie também podem ser elaborados, desde que haja estudos suficientes que possam embasar o planejamento das ações e justificar o investimento de recursos e esforços.
+    </p>
+    <p><div class="banner-m"><img src="{{static_url}}/images/projetos/planejamento/DSCN1326.jpg" /></div>
+    A elaboração dos PANs segue a ideia central de planejamento estratégico apresentado por SSC/IUCN (2008), Environment Canada (2003), NMFS (2004), Driver et al. (2009), sendo compostos de duas partes. A primeira, contém uma compilação da melhor informação disponível sobre as espécies e área alvo do PAN, além da descrição das ameaças incidentes. A segunda é o plano de ação propriamente dito, o qual é construído e consolidado de forma participativa, reunindo pessoas de diversos setores da sociedade com conhecimento sobre as espécies e área. De modo que, as ações possam ser direcionadas à realidade local e factíveis de serem implementadas e monitoradas.
+    </p>
+    <!--
     <p>
     Confira e colabore com a criação do <a href="http://cncflora.jbrj.gov.br/wiki/doku.php?id=protocolo_de_campo">Protocolo de Campo</a> na wiki do CNCFlora.
     </p>
+    -->
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
@@ -66,63 +72,43 @@
 <br/>
 <h3>Equipe</h3>
 <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/Eline.jpg"/>
-      <p><strong>Eline Martins:</strong>Bióloga, doutora em Botânica pela Escola Nacional de Botânica Tropical -
-        ENBT (2013) e mestre em Conservação da Natureza pela Universidade Federal Rural do Rio de
-        Janeiro – UFRRJ (2009). Trabalha com conservação de espécies com enfoque no
-        desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e genética
-        da conservação. No CNCFlora coordena o projeto “Planejamento de ações para a conservação de
-        espécies da Flora ameaçadas de extinção”. Eline adora o contato com a natureza, ir à praia,
-        praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!<br/>
-        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4162048A7" target="_blank">Currículo lattes</a></strong><br/>
-        <strong>Email:</strong> eline@cncflora.net</p>
-  </div>
+
   <div class="item">
       <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
       <p><strong>Daniel Maurenza</strong>
-        Biologo e mestre em Ecologia pelo Instituto Nacional de Pesquisas da
-        Amazônia. No CNCFlora faz parte da equipe planejamento de ações para a conservação de
-        espécies ameaçadas de extinção, tendo como atribuição a análise de dados da flora, produção
-        científica e coleta de dados de campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!<br/>
+      é biólogo, mestre em Ecologia pelo Instituto Nacional de Pesquisas da Amazônia. No CNCFlora No CNCFlora, participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ainda, é responsável pelo planejamento e organização logística das expedições à campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!
+      <br /><br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> dmaurenza@cncflora.net
       </p>
   </div>
+
   <div class="item">
-      <img src="{{static_url}}/images/equipe/Fernanda.jpg"/>
-      <p><strong>Fernanda Wimmer</strong>
-        Geógrafa formada pela Pontifícia Universidade Católica do Rio de
-        Janeiro, com especialização em Gestão Ambiental pela COPPE/UFRJ (2011). Trabalha com
-        geoprocessamento e sensoriamento remoto. No CNCFlora atua como técnica em
-        geoprocessamento. Fernanda adora artes, viajar, nadar e beber com os amigos!<br/>
-        <strong>Email:</strong> fernanda@cncflora.net
-      </p>
+      <img src="{{static_url}}/images/equipe/Eline.jpg"/>
+      <p><strong>Eline Martins</strong>
+      é bióloga, doutora em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2013) e mestre em Conservação da Natureza pela Universidade Federal Rural do Rio de Janeiro – UFRRJ (2009). Trabalha com conservação de espécies com enfoque no desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e genética da conservação. No CNCFlora desempenha a função de coordenadora técnico-científica e participa da elaboração dos Planos de Ação Nacional. Eline adora o contato com a natureza, ir à praia, praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!
+      <br />
+        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4162048A7" target="_blank">Currículo lattes</a></strong><br/>
+        <strong>Email:</strong> eline@cncflora.net</p>
   </div>
+
   <div class="item">
       <img src="{{static_url}}/images/equipe/Juliana.jpg"/>
       <p><strong>Juliana Amaral</strong>
-        Bióloga e mestre em Botânica pela Escola Nacional de Botânica Tropical -
-        ENBT (2014). No CNCFlora, participa de todos os processos envolvidos na elaboração de
-        estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e
-        de documentos técnicos ou de divulgação científica. Ainda, é responsável pela coleta e
-        determinação do material botânico durante as expedições à campo. Juliana adora montanhas,
-        praticar Yoga, aprender coisas novas e tomar vinho com os amigos!<br/>
-        <a href="http://lattes.cnpq.br/7258510578751609" target="_blank"><strong>Currículo lattes</strong></a><br/>
+      é bióloga, mestre em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2014). No CNCFlora, participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ainda, é responsável pela coleta e determinação do material botânico durante as expedições à campo. Juliana adora montanhas, praticar Yoga, aprender coisas novas e tomar vinho com os amigos!
+        <br/><br />
+        <strong>
+          <a href="http://lattes.cnpq.br/7258510578751609" target="_blank">Currículo lattes</a>
+        </strong>
+        <br />
         <strong>Email:</strong> juliana@cncflora.net<br/>
       </p>
   </div>
   <div class="item">
       <img src="{{static_url}}/images/equipe/Marcio.jpg"/>
       <p><strong>Marcio Verdi</strong>
-        Biólogo e mestre em Botânica pela Universidade Federal Rio Grande Sul
-        (2013), cujos interesses estão voltados para a avaliação da biodiversidade e modelagem de
-        distribuição de espécies sobre diferentes cenários climáticos, com enfoque para conservação. No
-        CNCFlora participa de todos os processos envolvidos na elaboração de estratégias de
-        conservação para a flora ameaçada de extinção, da redação de artigos científicos e de
-        documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e
-        determinação do material botânico durante as expedições à campo. Verdi adora coletar e
-        fotografar plantas, tomar chimarrão e apreciar cervejas artesanais.<br/>
+      é biólogo, mestre em Botânica pela Universidade Federal Rio Grande Sul (2013), cujos interesses estão voltados para a avaliação da biodiversidade e modelagem de distribuição de espécies sobre diferentes cenários climáticos, com enfoque para conservação. No CNCFlora participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ainda, é responsável pela coleta e determinação do material botânico durante as expedições à campo. Verdi adora coletar e fotografar plantas, tomar chimarrão e apreciar cervejas artesanais.
+      <Br /><br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> verdi@cncflora.net
       </p>
@@ -130,13 +116,8 @@
   <div class="item">
       <img src="{{static_url}}/images/equipe/Nina.jpg"/>
       <p><strong>Nina Pougy</strong>
-        Bióloga, com bacharel em Ecologia pela Universidade Federal do Rio de Janeiro -
-        UFRJ (2013). No CNCFlora, é coordenadora substituta do projeto “Planejamento de ações para a
-        conservação de espécies da Flora ameaçadas de extinção”. Também é responsável pelo
-        geoprocessamento e análises de dados espaciais e participa na elaboração de estratégias de
-        conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos
-        científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar
-        banho de cachoeira e sair com os amigos!<br/>
+      é bióloga, bacharel em Ecologia pela Universidade Federal do Rio de Janeiro - UFRJ (2013). No CNCFlora coordena o núcleo “Planejamento de ações”. Também é responsável pelo geoprocessamento e análises de dados espaciais e participa na elaboração de estratégias de conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar banho de cachoeira e sair com os amigos.
+      <br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> nina@cncflora.net
       </p>
