--- a/templates/home.html
+++ b/templates/home.html
@@ -81,9 +81,9 @@
 
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/livro_vermelho_2014.jpg" alt="" /></a>
+          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf" class="image left box-img"><img src="{{static_url}}/images/livro_vermelho_2014.jpg" alt="" /></a>
           <div class="inner">
-            <h3><a href="{{base_url}}/pt-br/livros">Livro Vermelho - Plantas Raras do Cerrado</a></h3>
+            <h3><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelhoPlantasRarasCerrado.pdf">Livro Vermelho da Flora do Brasil - Plantas Raras do Cerrado</a></h3>
             <p>Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
               que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
               priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das
@@ -94,14 +94,11 @@
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/ex-situ/capa_estrategia1.png" alt="" /></a>
+          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf" class="image left box-img"><img src="{{static_url}}/images/livrovermelho.png" alt="" /></a>
           <div class="inner">
-            <h3><a href="{{base_url}}/pt-br/livros">Estratégia Nacional para conservação ex situ</a></h3>
-            <p>Com o objetivo de promover a conservação efetiva da flora ameaçada e reverter os
-            processos de extinção, foi elaborada esta Estratégia, que traça diretrizes para fortalecer, 
-            ampliar e integrar os esforços de conservação ex situ de espécies ameaçadas da flora 
-            brasileira.
-            <br /><br />
+            <h3><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho.pdf">Livro Vermelho da Flora do Brasil</a></h3>
+    <p>
+      O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
             <br /><br />
             <br /><br />
             </p>
@@ -110,18 +107,25 @@
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
+          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
           <div class="inner">
-            <h3>Áreas prioritárias para conservação</h3>
+            <h3>
+              <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf">
+                Áreas prioritárias para conservação e uso sustentável da flora brasileira ameçada de extinção
+
+              </a>
+            </h3>
             <p>O livro “Áreas Prioritárias para Conservação e Uso Sustentável da Flora Brasileira Ameaçada de Extinção” é um importante instrumento para elaboração de políticas públicas, pois indica as localidades no território nacional onde ações para reduzir o risco de extinção de espécies da flora brasileira podem ser mais efetivas, visando alcançar a Meta 11 do Plano Estratégico para a Conservação da Biodiversidade de Aichi (CDB) até 2020.</p>
           </div>
         </div>
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" alt="" /></a>
+          <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf" class="image left box-img"><img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" alt="" /></a>
           <div class="inner">
-            <h3>PAN Faveiro de Wilson</h3>
+            <h3>
+              <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson </a>
+            </h3>
             <p>
             O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
             </p>
