--- a/templates/content/pt-br/document/documentos-norteadores.html
+++ b/templates/content/pt-br/document/documentos-norteadores.html
@@ -1,7 +1,24 @@
 <div class="doc">
+
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Documentacao_IUCN.pdf">
+  <a href="{{static_url}}/pdf/portaria_mma_443_2014.pdf">
+    <img src="{{static_url}}/images/documentos/norteadores/noteadores443.png"/>
+<div class="portfolio-overlay">
+    <p>
+    PORTARIA MMA N º 443, DE 17 DE DEZEMBRO DE 2014
+    - Lista Oficial das Espécies da Flora Brasileira Ameaçada de Extinção.
+
+    </p>
+
+</div>
+</a>
+</div>
+</div>
+
+<div class="col-sm-3 col-md-3 col-lg-3">
+<div class="img">
+  <a href="http://www.iucnredlist.org/documents/RL_Standards_Consistency.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores1.jpg"/>
 <div class="portfolio-overlay">
     <p>Documentação padrão e consistência para os critérios e categorias IUCN.</p>
@@ -10,6 +27,7 @@
 </a>
 </div>
 </div>
+
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
   <a href="{{static_url}}/pdf/documentos/Convencao_CDB_0.pdf">
@@ -21,6 +39,7 @@
 </a>
 </div>
 </div>
+<!--
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
   <a href="{{static_url}}/pdf/documentos/Guia_utilizacao_IUCN.pdf">
@@ -32,6 +51,7 @@
 </a>
 </div>
 </div>
+-->
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
   <a href="{{static_url}}/pdf/documentos/Sumario_Categorias_IUCN.pdf">
@@ -72,6 +92,15 @@
 <div class="portfolio-overlay">
     <p>Instrução Normativa n.6 - 2008 - Lista Oficial das Espécies da Flora Brasileira Ameaçada de Extinção.</p>
 
+</div>
+</a>
+</div>
+</div>
+<div class="col-sm-3 col-md-3 col-lg-3">
+<div class="img">
+  <a href="http://jr.iucnredlist.org/documents/RedListGuidelines.pdf"><img src="{{static_url}}/images/documentos/publicacoes/publicacoes6.jpg"/>
+<div class="portfolio-overlay">
+    <p>Guidelines for appropriate uses of IUCN Red List Data</p>
 </div>
 </a>
 </div>
