--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -1,4 +1,4 @@
-<h3>Lista Vermelha</h3>
+<h3>Núcleo Lista Vermelha</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <div class="banner-full"><img src="{{static_url}}/images/projetos/lista-vermelha/vermelha.jpg" /></div>
   <p>Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
@@ -6,10 +6,9 @@
     <a href="http://www.cbd.int/gspc/">“Estratégia Global de Conservação de Plantas”</a>.
     Listas vermelhas constituem uma ferramenta
     importante para a priorização de investimentos na conservação de espécies e
-    também demandam muitos recursos para sua construção e atualização
-    (Rodinini et al., 2013).</p>
+    também demandam muitos recursos para sua construção e atualização .</p>
 
-  <p>Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, que conta
+  <p>Esta importante tarefa é executada pelo “Núcleo Lista Vermelha”, que conta
     com uma equipe composta por profissionais formados em diferentes áreas
     ligadas às ciências da natureza, e treinados no uso dos critérios e categorias
     da <a href="http://www.iucnredlist.org/">União Internacional para Conservação da Natureza</a>.
@@ -20,21 +19,20 @@
 
   <p>O fluxo de trabalho adotado pela equipe, conta com um sistema de
     informações online, desenvolvido especificamente para o processo de
-    avaliação de risco de extinção (SiSFlora) e possui três etapas básicas:</p>
+    avaliação de risco de extinção possui três etapas básicas:</p>
 
   <p>A etapa de “Análise de dados”, onde ocorre a compilação dos dados das
     espécies, no perfil on-line de cada uma. São levantadas informações sobre a
     biologia,ecologia e distribuição de cada espécie, além de dados de ameaças e
     ações de conservação. Em seguida, durante a etapa de “Validação” os dados
-    passam pelo importante crivo da rede de especialistas colaboradores, que
-    através do SiSFlora, acessam e revisam as informações inseridas pela equipe
-    do Projeto Lista Vermelha. Feito isso, estas informações são revisadas pelos
-    analistas do Projeto Lista Vermelha, que incorporam todas as alterações
+    passam pelo importante crivo da rede de especialistas colaboradores
+    acessam e revisam as informações inseridas pela equipe
+    do Núcleo Lista Vermelha. Feito isso, estas informações são revisadas pelos
+    analistas do Núcleo Lista Vermelha, que incorporam todas as alterações
     indicadas pelos especialistas.</p>
 
   <p>Com o conhecimento gerado, inicia-se o processo de “Avaliação de risco de
-    extinção” das espécies, seguindo o sistema de <a href="http://www.iucnredlist.org/documents/2001RedListCats_Crit_Portugu%C3%AA
-    s.pdf">categorias e critérios</a> (versão
+    extinção” das espécies, seguindo o sistema de <a href="http://www.iucnredlist.org/documents/2001RedListCats_Crit_Portugu%C3%AAs.pdf">categorias e critérios</a> (versão
     3.1) estabelecidos pela IUCN. Durante essa etapa, as espécies são categorizadas em uma das
     categorias de risco de extinção:</p>
   <div class="banner-medium"><img src="{{static_url}}/images/projetos/lista-vermelha/unnamed.png" /></div><br/>
@@ -65,6 +63,18 @@
     </div>
 
     <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+        <a href="{{static_url}}/pdf/Manual_Especialista_Analista.pdf"  data-toggle="modal" data-target="#breve-two">
+          <img src="{{static_url}}/images/capa_m2.png"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p><br/>Guia para Especialista/Analista</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img breve">
         <a href=""  data-toggle="modal" data-target="#breve-two">
           <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
@@ -83,6 +93,29 @@
           <div class="portfolio-overlay">
             <br/>
             <p>Livro Vermelho da flora do Brasil, 2013</p>
+          </div>
+        </a>
+      </div>
+   </div>
+
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+        <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho2013Errata-17-02-2014.pdf">
+          <img src="{{static_url}}/images/capa_Errata.png"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Livro Vermelho da flora do Brasil, 2013 - Errata 01</p>
+          </div>
+        </a>
+      </div>
+   </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+        <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/LivroVermelho2013Errata-31-03-2014.pdf">
+          <img src="{{static_url}}/images/capa_Errata.png"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Livro Vermelho da flora do Brasil, 2013 - Errata 02</p>
           </div>
         </a>
       </div>
@@ -118,7 +151,7 @@
 </div>
 
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-  <h3>Fluxo de trabalho - Plantas Raras do Cerrado</h3>
+  <h3>Fluxo de trabalho</h3>
   <section class="box-steps">
     <div class="col-sm-3 col-md-3 col-lg-3 box active">
       <div class="box-chart chart ">
@@ -167,7 +200,7 @@
       <div class="chart-layer">
       </div>
     </div>
-    <div class="col-sm-3 col-md-3 col-lg-3 box">
+    <div class="col-sm-3 col-md-3 col-lg-3 box active">
       <div class="box-chart chart">
           <strong class="big">Publicação do Livro Vermelho</strong>
           <div class="layer"></div>
@@ -175,7 +208,7 @@
       <div class="chart-layer">
       </div>
     </div>
-    <div class="col-sm-3 col-md-3 col-lg-3 box">
+    <div class="col-sm-3 col-md-3 col-lg-3 box active">
       <div class="box-chart chart">
           <strong class="big">Envio Das Avaliações ao MMA</strong>
           <div class="layer"></div>
@@ -191,7 +224,7 @@
 
     <div class="item">
       <img src="{{static_url}}/images/equipe/tainan.jpeg"/>
-      <p><strong>Tainan Messina</strong> coordenadora do projeto Lista Vermelha:  No CNCFlora coordena o projeto “Lista
+      <p><strong>Tainan Messina</strong> coordenadora do Núcleo Lista Vermelha:  No CNCFlora coordena o projeto “Lista
       Vermelha”. Tem experiência nas áreas de biologia da conservação, conservação de espécies ameaçadas
       da flora e na elaboração de documentos técnico-científicos e protocolos para conservação da natureza.
       Também é Mestranda da Escola Nacional de Botânica Tropical – ENBT/JBRJ, graduada em Ciências
@@ -201,11 +234,21 @@
     </div>
 
     <div class="item">
+      <img src="{{static_url}}/images/equipe/duda.jpeg"/>
+      <p><strong>Eduardo Fernandez</strong>
+      Bacharel em Ciências Biológicas pela Universidade Santa Úrsula – USU (2012). Tem experiência nas áreas de botânica e ecologia nos principais biomas brasileiros e atua nos temas Biodiversidade de Ecossistemas de Montanhas e História Evolutiva de Vegetações Campestres. Integra a equipe do Núcleo Listas Vermelhas do CNCFlora, sendo responsável pela análise de dados e avaliação de risco de extinção das espécies da flora brasileira. É também responsável pela organização e a execução de expedições científicas para a coleta de material botânico em áreas prioritárias para conservação e pesquisa nas principais áreas com lacunas de informação. Encontra-se envolvido na produção de artigos científicos e notas sobre a distribuição geográfica de espécies raras/ ameaçadas da flora, além de produzir relatórios técnico-científicos, materiais para divulgação e diagnósticos sobre a situação de espécies da flora em risco de extinção.<br /><br />
+      <strong>
+        <a href="http://lattes.cnpq.br/0339764153484153">lattes</a>
+      </strong>
+      <strong>Email:</strong> efernandez@cncflora.net
+    </div>
+
+    <div class="item">
       <img src="{{static_url}}/images/equipe/Luiz.jpeg"/>
       <p><strong>Luiz Antonio Ferreira dos Santos Filho</strong>Graduado em Ciências Biológicas pela Universidade Santa
       Úrsula (2009). Pós-graduado em Meio Ambiente pela COPPE/UFRJ (2012). Mestrando pela Escola
       Nacional de Botânica Tropical (ENBT/JBRJ). No Centro Nacional de Conservação da Flora (CNCFlora)
-      atua no Projeto Lista Vermelha, coordenando o fluxo de trabalho da avaliação do risco de extinção da
+      atua no Núcleo Lista Vermelha, coordenando o fluxo de trabalho da avaliação do risco de extinção da
       flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.<br/>
       <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4559241J9" target="_blank">Currículo lattes</a></strong><br/>
       <strong>Email:</strong> luiz@cncflora.net
@@ -214,7 +257,7 @@
 
     <div class="item">
       <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
-      <p><strong>Lucas Moraes</strong> No CNCFlora, é integrante da equipe do “Projeto Lista Vermelha”, com atuação principal
+      <p><strong>Lucas Moraes</strong> No CNCFlora, é integrante da equipe do “Núcleo Lista Vermelha”, com atuação principal
       nas análises de avaliação de risco de extinção. Além disso, possui partipação nas etapas de redação e
       editoração de documentos e no gerenciamento do banco de imagens. Possui graduação em Ciências
       Biológicas pela Universidade Federal do Rio de Janeiro, na modalidade Genética (2013). Tem experiência
@@ -224,9 +267,10 @@
       </strong><br/>
       <strong>Email:</strong> lucasmoraes@cncflora.net</p>
     </div>
+
     <div class="item">
       <img src="{{static_url}}/images/equipe/Lucas.jpeg"/>
-      <p><strong>Lucas Moulton</strong> No CNCFlora, faz parte da equipe do “Projeto Lista Vermelha”, participando da análise
+      <p><strong>Lucas Moulton</strong> No CNCFlora, faz parte da equipe do “Núcleo Lista Vermelha”, participando da análise
       de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação
       científica; e responsável por traduções em inglês. Graduado em Ciência Ambiental (Bacharelado) pela
       Universidade de New England (University of New England), Austrália. Possui experiência com a
@@ -234,6 +278,22 @@
       de aumento de nutrientes em sistema lêntico e como auxiliar de campo em estudos de fitossociologia da
       Mata Nebular da Serra dos Orgãos.<br/>
       <strong>Email:</strong> lmoulton@cncflora.net</p>
+    </div>
+
+    <div class="item">
+      <img src="{{static_url}}/images/equipe/Raquel.jpeg"/>
+      <p><strong>Raquel Negrão</strong> No CNCFlora faz parte da equipe do “Núcleo Lista Vermelha”, participando da análise de
+      dados, avaliação de risco de extinção, redação de artigos científicos, de documentos técnicos e de
+      divulgação científica. É Doutora e Mestre pelo Programa de Ecologia e Recursos Naturais da
+      Universidade Federal de São Carlos e graduada em Ciências Biológicas pela mesma universidade.
+      Desenvolveu e participou de projetos nas áreas de Ecologia Vegetal de Populações e Comunidades,
+      Botânica, Ecologia da Paisagem, Ecologia de Estradas e Educação Ambiental, atuando principalmente
+      nos seguintes temas: estrutura e dinâmica de populações, ecologia de comunidades envolvendo
+      levantamento fitossociológicos, distribuição espacial, estudo de ecótones e efeito de transições artificias,
+      educação ambiental e conservação da biodiversidade. Possui experiência de campo em diferentes áreas
+      de Cerrado, Mata Atlântica e Restinga.<br/>
+      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
+      <strong>Email:</strong> raquel@cncflora.net</p>
     </div>
 
     <div class="item">
@@ -252,21 +312,7 @@
         <strong>Email:</strong> rodrigo@cncflora.net
       </p>
     </div>
-    <div class="item">
-      <img src="{{static_url}}/images/equipe/Raquel.jpeg"/>
-      <p><strong>Raquel Negrão</strong> No CNCFlora faz parte da equipe do “Projeto Lista Vermelha”, participando da análise de
-      dados, avaliação de risco de extinção, redação de artigos científicos, de documentos técnicos e de
-      divulgação científica. É Doutora e Mestre pelo Programa de Ecologia e Recursos Naturais da
-      Universidade Federal de São Carlos e graduada em Ciências Biológicas pela mesma universidade.
-      Desenvolveu e participou de projetos nas áreas de Ecologia Vegetal de Populações e Comunidades,
-      Botânica, Ecologia da Paisagem, Ecologia de Estradas e Educação Ambiental, atuando principalmente
-      nos seguintes temas: estrutura e dinâmica de populações, ecologia de comunidades envolvendo
-      levantamento fitossociológicos, distribuição espacial, estudo de ecótones e efeito de transições artificias,
-      educação ambiental e conservação da biodiversidade. Possui experiência de campo em diferentes áreas
-      de Cerrado, Mata Atlântica e Restinga.<br/>
-      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
-      <strong>Email:</strong> raquel@cncflora.net</p>
-    </div>
+
   </div>
 </div>
 
