--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -1,4 +1,4 @@
-<h3>Sistemas</h3>
+<h3>Núcleo Sistemas</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
 <p>
 O Centro Nacional de Conservação da Flora (CNCFlora) tem a missão de fornecer, ao Ministério do Meio Ambiente e a outras instâncias do governo brasileiro, informação técnica e científica para nortear decisões políticas relacionadas à conservação da flora brasileira.
@@ -10,18 +10,6 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <h3>Equipe</h3>
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
-      <div class="item">
-        <img src="{{static_url}}/images/equipe/Thiago.jpeg"/>
-        <p><strong>Thiago Serrano de Almeida Penedo</strong> Graduado em Ciências Biológicas (Bacharelado) pela
-          Universidade Federal do Estado do Rio de Janeiro – UNIRIO (2012). Possui experiência nas áreas de
-          Sistemas de Informação Geográfica, Geoprocessamento e Biologia da Conservação. No CNCFlora faz
-          parte do projeto “Desenvolvimento de sistemas e análises espaciais”, participando das análises espaciais
-          relacionadas a conservação da flora, georreferenciamento e geoprocessamento, redação de artigos
-          científicos e de documentos técnicos ou de divulgação científica.<br/><br/><br/>
-          <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4245432J4" target="_blank">Currículo lattes</a></strong><br/>
-          <strong>Email:</strong>  thiago@cncflora.jbrj.gov.br
-        </p>
-      </div>
       <div class="item">
         <img src="{{static_url}}/images/equipe/Diogo.jpeg"/>
         <p><strong>Diogo Silva</strong> Graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá
@@ -35,6 +23,14 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
         </p>
       </div>
       <div class="item">
+          <img src="{{static_url}}/images/equipe/Fernanda.jpg"/>
+          <p><strong>Fernanda Wimmer</strong>
+          é geógrafa formada pela Pontifícia Universidade Católica do Rio de Janeiro, com especialização em Gestão Ambiental pela COPPE/UFRJ (2011). Trabalha com geoprocessamento e sensoriamento remoto. No CNCFlora desempenha a função de técnica em geoprocessamento. Fernanda adora artes, viajar, nadar e beber com os amigos!
+            <br/>
+            <strong>Email:</strong> fernanda@cncflora.net
+          </p>
+      </div>
+      <div class="item">
         <img src="{{static_url}}/images/equipe/Leonardo.jpeg"/>
         <p><strong>Leonardo Novaes</strong> Graduado em Geografia (Bacharelado) pela Pontifícia Universidade Católica do Rio
           de Janeiro - PUC (2011). Possui experiência na área de sensoriamento remoto e sistemas de
@@ -45,15 +41,6 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
           <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4455856P9" target="_blank">Currículo lattes</a></strong><br/>
           <strong>Email:</strong> leonardo@cncflora.net
         </p>
-      </div>
-      <div class="item">
-        <img src="{{static_url}}/images/equipe/Bruno.jpeg"/>
-        <p><strong>Bruno Giminiani</strong> Graduado em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de
-          Sá - UNESA. Possui experiência no desenvolvimento de aplicações de portais para a internet e
-          desenvolvimento de sistemas e processos utilizando tecnologias e ferramentas de código livre
-          (opensource). No CNCFlora faz parte da equipe de "Projeto Desenvolvimento de sistemas e análises
-          espaciais”, participando do desenvolvimento de sistemas, informatização, implementação e
-          gerenciamento do banco de dados.<br/><strong>Email:</strong> bruno@cncflora.net</p>
       </div>
       <div class="item">
         <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
