--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -92,11 +92,11 @@
               <li ><a href="{{base_url}}/" class="current">Home</a></li>
               <li><a href="{{base_url}}/pt-br/listavermelha">Lista Vermelha</a></li>
               <li>
-                <a href="{{base_url}}/pt-br/projetos" class="projects" style="padding: 10px;">Projetos</a>
+                <a href="{{base_url}}/pt-br/projetos" class="projects" style="padding: 10px;">Núcleos</a>
                 <ul class="list-projects">
                   <li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/planejamento-de-acoes">Planejamento de Ações</a></li>
-                  <li><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Áreas Prioritárias</a></li>
+                  <li><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Planejamento Espacial para Conservação</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></li>
                 </ul>
@@ -153,7 +153,7 @@
             <ul class="submenu">
 							<li><a href="{{base_url}}/" class="icon ">Home</a></li>
 							<li><a href="{{base_url}}/pt-br/listavermelha" class="icon ">Lista Vermelha</a></li>
-              <li><a href="{{base_url}}/pt-br/projetos" class="icon ">Projetos</a></li>
+              <li><a href="{{base_url}}/pt-br/projetos" class="icon ">Núcleos</a></li>
               <li><a href="{{base_url}}/pt-br/publicacoes" class="icon ">Documentos</a></li>
               <li><a href="{{base_url}}/pt-br/livros" class="icon ">Livros</a></li>
 							<li><a href="{{base_url}}/pt-br/equipe" class="icon ">Equipe</a></li>
